--- a/src/index.css
+++ b/src/index.css
@@ -197,4 +197,7 @@
     @apply [&:not(:first-child)]:mt-4;
     @apply [&:not(:last-child)]:mb-4;
   }
+  button {
+    @apply cursor-pointer;
+  }
 }
